--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "node-cron": "^3.0.3"
+    "express": "^4.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
