--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "win": {
       "target": "nsis",
       "icon": "logo.ico"
-    },
-    "asar": true
+    }
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "electron-updater": "^6.8.3",
     "express": "^4.18.3"
   },
   "devDependencies": {
