fix: 彈窗功能 && 產出檔案名稱

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "logo.ico"
+      "icon": "logo.ico",
+      "artifactName": "${name}-setup-${version}.${ext}"
     }
   },
   "dependencies": {
